fixed the spacing between h3 and h4 with padding -- margins didn't work so well as it overlapped with hr's margin

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -85,11 +85,11 @@ body.pdf {
     }
 
     h4 {
-        margin: .2em 0 0 21%;
+        margin: 1.4em 0 0 21%;
     }
 
     h4+ul {
-        margin: -1em 0 0 21%;
+        margin: -0.4em 0 0 21%;
     }
 
     ol {
